--- a/src/global.scss
+++ b/src/global.scss
@@ -367,11 +367,33 @@ ion-refresher.refresher-native .refresher-pulling-icon, ion-refresher.refresher-
   border: 3px solid #a4071a !important;
   background: #a4071a !important;
 }
-#botao-canto ion-icon, #botao-canto-delete ion-icon {
+.botao-canto ion-icon, .botao-canto-delete ion-icon {
     font-size: 20px;
-    color: #fff; /* Cor do ícone */
+    color: #fff; 
 }
 
+.botao-canto-card, .botao-canto-delete-card {
+  width: 35px;
+  height: 35px;
+  position: absolute;
+  top: 35px;
+  right: 20px;
+  z-index: 99999;
+  border: 3px solid #0e2b52 !important;
+  background: #0e2b52 !important;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #fff; 
+}
+.botao-delete {
+  right: 20px; 
+  border: 3px solid #a4071a !important;
+  background: #a4071a !important;
+}
+.botao-canto-card ion-icon, .botao-canto-delete-card ion-icon {
+    font-size: 20px;
+    color: #fff;
+}
 //fim do cards tela principal
 
 //ion-fab tela principal
@@ -390,8 +412,6 @@ ion-fab-button {
   --background: #a4071a;
 }
 //fim do ion-fab tela principal
-
-//USUARIO.SCSS
 
 //search bar
  .input-barra {
@@ -433,8 +453,6 @@ ion-fab-button {
   .lock-icon:active {
     transform: scale(0.9);
   }
-  
-  //Animação quando focus
   .lock-icon {
     animation-duration: 0.3s;
     animation-fill-mode: both;
@@ -568,7 +586,7 @@ ion-fab-button {
 }
 //fim do botao de add img
 
-//botao de salvar
+//botoes importantes
 #btSalvarConfig{
   --background: #0e2b52;
   --color: #fff;
@@ -593,6 +611,21 @@ ion-fab-button {
   font-weight: 600;
   margin-top: 70px;
 }
+#btSalvarConfigUser{
+  --background: #0e2b52;
+  --color: #fff;
+  --border-radius: 20px;
+  border-radius: 22px;
+  border: 3px solid #d9d9d9;
+  width: 50%;
+  height: 50px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 20px;
+}
+//fim dos botoes importantes
+
+//data de nascimento
 .labelDtNascimento{
   font-size: 14px;
   margin-left: 10px;
@@ -603,17 +636,13 @@ ion-datetime{
 ion-datetime::part(calendar-day) {
   color: #0e2b52;
 }
-
-
 ion-datetime::part(calendar-day today) {
   color: #0e2b52;
 }
-
 ion-datetime::part(calendar-day):focus {
   background-color: #0e2b5266;
   box-shadow: 0px 0px 0px 4px #0e2b5266;
 }
-
 ion-datetime.md::part(calendar-day active),
 ion-datetime.md::part(calendar-day active):focus {
   background-color: #0e2b52;
@@ -634,21 +663,7 @@ ion-datetime::part(month-year-button) {
   color: #0e2b52 !important;
   font-weight: 600;
 }
-#btSalvarConfigUser{
-  --background: #0e2b52;
-  --color: #fff;
-  --border-radius: 20px;
-  border-radius: 22px;
-  border: 3px solid #d9d9d9;
-  width: 50%;
-  height: 50px;
-  font-size: 18px;
-  font-weight: 600;
-  margin-top: 20px;
-}
-//fim do botao de salvar
-
-//FIM DO USUARIO.SCSS
+//fim data de nascimento
 
 //FIM DO PATHS.SCSS
 
@@ -754,6 +769,19 @@ ion-datetime::part(month-year-button) {
 }
 
 //FIM DO CENTRAL-AJUDA.SCSS
+
+//-----------------------------------------------//
+
+//LOGIN.SCSS
+.content-login{
+  background-color: #0e2b52;
+}
+.container-login{
+  width: 100%;
+  height: 100%;
+}
+
+//FIM DO LOGIN.SCSS
 
 //-----------------------------------------------//
 
