--- a/src/global.scss
+++ b/src/global.scss
@@ -779,6 +779,20 @@ ion-datetime::part(month-year-button) {
 .container-login{
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-box{
+  width: 320px;
+  height: 400px;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(40px);
+  border: 3px solid #fff;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  
+
 }
 
 //FIM DO LOGIN.SCSS
